updated remainder of SA 2 (mainly footnote changes, minor translation changes), also fixed Taisho refs in many SA sutras

--- a/01_agama/samyukta/02/SA2_128.md
+++ b/01_agama/samyukta/02/SA2_128.md
@@ -14,31 +14,31 @@ next: SA2_129.html
   <th class='ch'>（二三三） 世間</th>
   <th class='en'>128 (233). The World</th>
   <tr>
-    <td class='ch' title='t125.2.56c2'>如是我聞： 一時，佛住舍衛國、祇樹、給孤獨園。</td>
+    <td class='ch' title='t99.2.56c2'>如是我聞： 一時，佛住舍衛國、祇樹、給孤獨園。</td>
     <td id='p1'>1. Thus I have heard:<sup id="ref1"><a href="#n1">1</a></sup> One time, the Buddha was staying at Anāthapiṇḍada’s Park in Jeta’s Grove of Śrāvastī.</td>
   </tr>
   <tr>
-    <td class='ch' title='t125.2.56c3'>爾時，世尊告諸比丘： 「我今當說世間、世間集、世間滅、世間滅道跡。 諦聽，善思！</td>
+    <td class='ch' title='t99.2.56c3'>爾時，世尊告諸比丘： 「我今當說世間、世間集、世間滅、世間滅道跡。 諦聽，善思！</td>
     <td id='p2'>2. It was then that the Bhagavān told the monks, “Now, I will discuss the world, the world’s formation, the world’s cessation, and the path to the world’s cessation. Listen closely, and consider it well!”</td>
   </tr>
   <tr>
-    <td class='ch' title='t125.2.56c5'>「云何為世間？ 謂六內入處。 云何六？ 眼內入處，耳⋯鼻⋯舌⋯身⋯意內入處。</td>
+    <td class='ch' title='t99.2.56c5'>「云何為世間？ 謂六內入處。 云何六？ 眼內入處，耳⋯鼻⋯舌⋯身⋯意內入處。</td>
     <td id='p3'>3. “What is the world? It’s the six inner sense fields. What are the six? The inner sense field of the eye … ear … nose … tongue … body … the inner sense field of the mind.</td>
   </tr>
   <tr>
-    <td class='ch' title='t125.2.56c6'>「云何世間集？ 謂當來有愛，喜、貪俱，彼彼集著。</td>
+    <td class='ch' title='t99.2.56c6'>「云何世間集？ 謂當來有愛，喜、貪俱，彼彼集著。</td>
     <td id='p4'>4. “What is the world’s formation? It’s craving for a future existence together with delight and greed and attachment to the formation of one [existence] or another.<sup id="ref2"><a href="#n2">2</a></sup></td>
   </tr>
   <tr>
-    <td class='ch' title='t125.2.56c7'>「云何世間滅？ 謂當來有愛，喜、貪俱，彼彼集著無餘斷。 已捨、已吐、已盡，離欲、滅、止、沒。</td>
+    <td class='ch' title='t99.2.56c7'>「云何世間滅？ 謂當來有愛，喜、貪俱，彼彼集著無餘斷。 已捨、已吐、已盡，離欲、滅、止、沒。</td>
     <td id='p5'>5. “What is the world’s cessation? Craving for a future existence together with delight and greed and attachment to the formation of one [existence] or another is stopped without remainder. This having been abandoned, rejected, and ended, one is free of desire, and it ceases, stops, and disappears.</td>
   </tr>
   <tr>
-    <td class='ch' title='t125.2.56c9'>「云何世間滅道跡？ 謂八聖道：正見、正志、正語、正業、正命、正方便、正念、正定。」</td>
+    <td class='ch' title='t99.2.56c9'>「云何世間滅道跡？ 謂八聖道：正見、正志、正語、正業、正命、正方便、正念、正定。」</td>
     <td id='p6'>6. “What is the path to the world’s cessation? It’s the eightfold path, which is right view, right intention, right speech, right action, right livelihood, right method, right mindfulness, and right <em>samādhi</em>.”</td>
   </tr>
   <tr>
-    <td class='ch' title='t125.2.56c10'>佛說此經已，諸比丘聞佛所說歡喜，奉行。</td>
+    <td class='ch' title='t99.2.56c10'>佛說此經已，諸比丘聞佛所說歡喜，奉行。</td>
     <td id='p7'>7. After he spoke this <em>sūtra</em>, the monks who heard what the Buddha taught rejoiced and approved.</td>
   </tr>
 </table>
@@ -48,7 +48,7 @@ next: SA2_129.html
 <h3 id="notes">Notes</h3>
 
 <ol class="notes-list">
-<li id="n1"><p>This is <em>sūtra</em> no. 233 in the <cite>Taisho</cite> edition and no. 306 in Yinshun (<a href="https://cbetaonline.dila.edu.tw/zh/T02n0099_p0056c02" target="_blank">T99.2.56c2-11</a>). It has a little similarity with <a href="https://suttacentral.net/sn35.107" target="_blank">SN 35.107</a> and <a href="https://suttacentral.net/sn12.44" target="_blank">SN 12.44</a>; however, it only shares part of the basic topic, namely the origin and ending of the world. Otherwise, this <em>sūtra</em> has little in common with them. The Pali <em>sutta</em>s both present a chain of dependent origination for the world (which is curious in the case of SN 35.107 since it should relate to the six sense fields). Here, the world is analyzed along the lines of the four noble truths, which equates it with suffering. [<a href="#ref1">back</a>]</p></li>
+<li id="n1"><p>This is <em>sūtra</em> no. 233 in the <cite>Taisho</cite> edition and no. 306 in Yinshun (<a href="https://cbetaonline.dila.edu.tw/zh/T02n0099_p0056c02" target="_blank">T99.2.56c2-11</a>, <a href="https://cbetaonline.dila.edu.tw/zh/Y30n0030_p0277a08" target="_blank">Y30.277a8-14</a>). It has a little similarity with <a href="https://suttacentral.net/sn35.107" target="_blank">SN 35.107</a> and <a href="https://suttacentral.net/sn12.44" target="_blank">SN 12.44</a>; however, it only shares part of the basic topic, namely the origin and ending of the world. Otherwise, this <em>sūtra</em> has little in common with them. The Pali <em>sutta</em>s both present a chain of dependent origination for the world (which is curious in the case of SN 35.107 since it should relate to the six sense fields). Here, the world is analyzed along the lines of the four noble truths, which equates it with suffering. [<a href="#ref1">back</a>]</p></li>
 <li id="n2"><p><em>attachment to the formation of one [existence] or another</em>. C. <span class="ch">彼彼集著</span>, P. <em>tatratatrābhinandinī</em>. The parallel P. can be found in sources like <a href="https://suttacentral.net/sn56.11" target="_blank">SN 56.11</a>. The expression <span class="ch">彼彼</span> (<em>tatratatra</em>) lit. means “here or there.” In this context, it likely refers to forms of existence or birthplaces that people try to attain through merit-making and the like. The expression here says one is attachment to the formation (<span class="ch">集著</span>) of such places, rather than taking delight in them (<em>abhinandinī</em>). [<a href="#ref2">back</a>]</p></li>
 </ol>
 <hr/>
