--- a/01_agama/samyukta/02/SA2_129.md
+++ b/01_agama/samyukta/02/SA2_129.md
@@ -14,39 +14,39 @@ next: SA2_130.html
   <th class='ch'>（二三四） 世界邊</th>
   <th class='en'>129 (234). The End of the World</th>
   <tr>
-    <td class='ch' title='t125.2.56c12'>如是我聞： 一時，佛住舍衛國、祇樹、給孤獨園。</td>
+    <td class='ch' title='t99.2.56c12'>如是我聞： 一時，佛住舍衛國、祇樹、給孤獨園。</td>
     <td id='p1'>1. Thus I have heard:<sup id="ref1"><a href="#n1">1</a></sup> One time, the Buddha was staying at Anāthapiṇḍada’s Park in Jeta’s Grove of Śrāvastī.</td>
   </tr>
   <tr>
-    <td class='ch' title='t125.2.56c13'>爾時，世尊告諸比丘： 「我不說有人行到世界邊者，我亦不說不行到世界邊而究竟苦邊者。」 如是說已，入室坐禪。</td>
+    <td class='ch' title='t99.2.56c13'>爾時，世尊告諸比丘： 「我不說有人行到世界邊者，我亦不說不行到世界邊而究竟苦邊者。」 如是說已，入室坐禪。</td>
     <td id='p2'>2. It was then that the Bhagavān addressed the monks, “I don’t say someone could travel to the end of the world, nor do I say that there’s an ultimate end of suffering for someone who doesn’t travel to the end of the world.” After saying this, he went into his dwelling to sit in meditation.</td>
   </tr>
   <tr>
-    <td class='ch' title='t125.2.56c15'>時，眾多比丘，世尊去後，即共議言： 「世尊向者略說法言： 『我不說有人行到世界邊者，我亦不說不行到世界邊而得究竟苦邊者。』 如是說已，入室坐禪。 我等今於世尊略說法中未解其義。 是中諸尊，誰有堪能於世尊略說法中，廣為我等說其義者？」</td>
+    <td class='ch' title='t99.2.56c15'>時，眾多比丘，世尊去後，即共議言： 「世尊向者略說法言： 『我不說有人行到世界邊者，我亦不說不行到世界邊而得究竟苦邊者。』 如是說已，入室坐禪。 我等今於世尊略說法中未解其義。 是中諸尊，誰有堪能於世尊略說法中，廣為我等說其義者？」</td>
     <td id='p3'>3. A group of monks then discussed it after the Bhagavān was gone: “The Bhagavān only gave this brief teaching: ‘I don’t say someone could travel to the end of the world, nor do I say that there’s an ultimate end of suffering for someone who doesn’t travel to the end of the world.’ After saying this, he went into his dwelling to sit in meditation. We’ve yet to understand the meaning of the Bhagavān’s brief teaching. Who among the Venerables is capable of explaining the meaning of the Bhagavān’s brief teaching for us?”</td>
   </tr>
   <tr>
-    <td class='ch' title='t125.2.56c21'>復作是言： 「唯有尊者阿難。 聰慧總持，而常給侍世尊左右。 世尊讚歎多聞梵行。 堪為我等於世尊略說法中廣說其義。 今當往詣尊者阿難所，請求令說。」</td>
+    <td class='ch' title='t99.2.56c21'>復作是言： 「唯有尊者阿難。 聰慧總持，而常給侍世尊左右。 世尊讚歎多聞梵行。 堪為我等於世尊略說法中廣說其義。 今當往詣尊者阿難所，請求令說。」</td>
     <td id='p4'>4. Again, they said, “There’s only Venerable Ānanda. He’s wise, has a complete memory, and always attends to the Bhagavān, right and left. The Bhagavān praises him as a well-versed religious practitioner. He’s capable of explaining the meaning of the Bhagavān’s brief teaching for us. Let’s go to Venerable Ānanda and ask him to explain it.”</td>
   </tr>
   <tr>
-    <td class='ch' title='t125.2.56c25'>時，眾多比丘往詣尊者阿難所，共相問訊已，於一面坐。 具以上事廣問阿難。</td>
+    <td class='ch' title='t99.2.56c25'>時，眾多比丘往詣尊者阿難所，共相問訊已，於一面坐。 具以上事廣問阿難。</td>
     <td>That group of monks then went to Venerable Ānanda after having this discussion and sat to one side. They then asked Ānanda about the matter.</td>
   </tr>
   <tr>
-    <td class='ch' title='t125.2.56c27'>爾時，阿難告諸比丘： 「諦聽，善思，今當為說。 若世間、世間名、世間覺、世間言辭、世間語說，此等皆入世間數。 諸尊，謂眼是世間、世間名、世間覺、世間言辭、世間語說，是等悉入世間數。 耳、鼻、舌、身、意亦復如是。</td>
+    <td class='ch' title='t99.2.56c27'>爾時，阿難告諸比丘： 「諦聽，善思，今當為說。 若世間、世間名、世間覺、世間言辭、世間語說，此等皆入世間數。 諸尊，謂眼是世間、世間名、世間覺、世間言辭、世間語說，是等悉入世間數。 耳、鼻、舌、身、意亦復如是。</td>
     <td id='p5'>5. It was then that Ānanda told the monks, “Listen closely, and consider it well. I will explain it for you. Whether it’s the world, the world’s names, the world’s ideas, the world’s expressions, and the world’s languages, they all enter the world, and it proliferates. Venerables, that’s to say that when the eye is the world, the world’s names, the world’s ideas, the world’s expressions, and the world’s languages, which all enter the world, and it proliferates. <em>The ear, nose, tongue, body, and mind are likewise.</em></td>
   </tr>
   <tr>
-    <td class='ch' title='t125.2.57a3'>「多聞聖弟子於六入處集、滅、味、患、離如實知。 是名聖弟子到世界邊、知世間、世間所重、度世間。」</td>
+    <td class='ch' title='t99.2.57a3'>「多聞聖弟子於六入處集、滅、味、患、離如實知。 是名聖弟子到世界邊、知世間、世間所重、度世間。」</td>
     <td id='p6'>6. “The well-versed noble disciple truly knows the formation, cessation, enjoyment, trouble, and escape from the six sense fields. This is called the noble disciple who travels to the end of the world, knows the world, is honored by the world, and crosses over the world.”</td>
   </tr>
   <tr>
-    <td class='ch' title='t125.2.57a5'>爾時，尊者阿難復說偈言：</td>
+    <td class='ch' title='t99.2.57a5'>爾時，尊者阿難復說偈言：</td>
     <td id='p7'>7. It was then that Venerable Ānanda restated this in verse:</td>
   </tr>
 <tr>
-  <td title='t125.2.57a7'><ul class='verse'>
+  <td title='t99.2.57a7'><ul class='verse'>
     <li class='ch'>「非是遊步者，<br/>
     能到世界邊；<br/>
     不到世界邊，<br/>
@@ -60,7 +60,7 @@ next: SA2_130.html
   </ul></td>
 </tr>
 <tr>
-  <td title='t125.2.57a9'><ul class='verse'>
+  <td title='t99.2.57a9'><ul class='verse'>
     <li class='ch'>是故牟尼尊，<br/>
     名知世間者；<br/>
     能到世界邊，<br/>
@@ -74,7 +74,7 @@ next: SA2_130.html
   </ul></td>
 </tr>
 <tr>
-  <td title='t125.2.57a11'><ul class='verse'>
+  <td title='t99.2.57a11'><ul class='verse'>
     <li class='ch'>「世界邊唯有，<br/>
     正智能諦了；<br/>
     覺慧達世間，<br/>
@@ -88,11 +88,11 @@ next: SA2_130.html
   </ul></td>
 </tr>
   <tr>
-    <td class='ch' title='t125.2.57a13'>「如是，諸尊。 向者世尊略說法已，入室坐禪。 我今為汝分別廣說。」</td>
+    <td class='ch' title='t99.2.57a13'>「如是，諸尊。 向者世尊略說法已，入室坐禪。 我今為汝分別廣說。」</td>
     <td id='p8'>8. “Indeed, Venerables. The Bhagavān only gave this brief teaching and went into his dwelling to sit in meditation. Now, I’ve discerned and explained it for you in detail.”</td>
   </tr>
   <tr>
-    <td class='ch' title='t125.2.57a14'>尊者阿難說是法已，眾多比丘聞其所說歡喜，奉行。</td>
+    <td class='ch' title='t99.2.57a14'>尊者阿難說是法已，眾多比丘聞其所說歡喜，奉行。</td>
     <td id='p9'>9. After he explained this teaching, that group of monks who heard what Venerable Ānanda taught rejoiced and approved.</td>
   </tr>
 </table>
@@ -102,7 +102,7 @@ next: SA2_130.html
 <h3 id="notes">Notes</h3>
 
 <ol class="notes-list">
-<li id="n1"><p>This is <em>sūtra</em> no. 234 in the <cite>Taisho</cite> edition and no. 307 in Yinshun (<a href="https://cbetaonline.dila.edu.tw/zh/T02n0099_p0056c12" target="_blank">T99.2.56c12-7a15</a>). It’s parallel with <a href="https://suttacentral.net/sn35.116" target="_blank">SN 35.116</a>. The introduction of the <em>sūtra</em> is the same in both versions, but they diverge at the point when the monks go to Ānanda for an explanation.</p>
+<li id="n1"><p>This is <em>sūtra</em> no. 234 in the <cite>Taisho</cite> edition and no. 307 in Yinshun (<a href="https://cbetaonline.dila.edu.tw/zh/T02n0099_p0056c12" target="_blank">T99.2.56c12-7a15</a>, <a href="https://cbetaonline.dila.edu.tw/zh/Y30n0030_p0278a02" target="_blank">Y30.278a2-9a3</a>). It’s parallel with <a href="https://suttacentral.net/sn35.116" target="_blank">SN 35.116</a>. The introduction of the <em>sūtra</em> is the same in both versions, but they diverge at the point when the monks go to Ānanda for an explanation.</p>
 <p>In SN 35.116, Ānanda chides the monks who go to him, using a parable about looking for heartwood in a tree’s roots and branches. They should have asked the Buddha while they had the chance. This doesn’t happen in the present version. Otherwise the story leading up to Ānanda’s explanation is the same.</p>
 <p>Another difference is that Ānanda defines the world in SN 35.116 as perceptions and imaginings about the world (<em>lokasaññī … lokamānī</em>) that results from sensory experience. Here, Ānanda instead refers to societal conventions about the world, referring to the names, ideas, expressions, and languages (<span class="ch">世間名、世間覺、世間言辭、世間語說</span>) that enter the world through sensory experience.</p>
 <p>In SN 35.116, Ānanda doesn’t comment on how someone reaches the end of suffering by going to the end of the world. Here, Ānanda explains this as truly knowing the formation, cessation, enjoyment, trouble, and escape from the six sense fields.</p>
