--- a/01_agama/samyukta/02/SA2_93.md
+++ b/01_agama/samyukta/02/SA2_93.md
@@ -27,7 +27,7 @@ next: SA2_94.html
   </tr>
   <tr>
     <td class='ch' title='t99.2.52c24'>佛告比丘： 「我今問汝，汝隨問答我。 比丘，汝見眼觸入處是我、異我、相在不？」</td>
-    <td id='p4'>4. The Buddha asked this monk, “Now, I will ask you a question, and you answer that question. Monk, do you see the sense field of visual contact as self, different than self, or either as being present in the other?”</td>
+    <td id='p4'>4. The Buddha asked this monk, “Now, I will ask you a question, and you answer that question. Monk, do you see the sense field of visual contact as self, different than self, or either being present in the other?”</td>
   </tr>
   <tr>
     <td class='ch' title='t99.2.52c26'>答言：「不也，世尊。」</td>
@@ -39,7 +39,7 @@ next: SA2_94.html
   </tr>
   <tr>
     <td class='ch' title='t99.2.53a2'>「汝見耳⋯鼻⋯舌⋯身⋯意觸入處是我、異我、相在不？」</td>
-    <td id='p6'>6. “Do you see the sense field of auditory … olfactory … gustatory … somatic … mental contact as self, different than self, or either as being present in the other?”</td>
+    <td id='p6'>6. “Do you see the sense field of auditory … olfactory … gustatory … somatic … mental contact as self, different than self, or either being present in the other?”</td>
   </tr>
   <tr>
     <td class='ch' title='t99.2.53a3'>答言：「不也，世尊！」</td>
@@ -60,12 +60,12 @@ next: SA2_94.html
 <h3 id="notes">Notes</h3>
 
 <ol class="notes-list">
-<li id="n1"><p>This is <em>sūtra</em> no. 209 in the <cite>Taisho</cite> edition and no. 271 in Yinshun (<a href="https://cbetaonline.dila.edu.tw/zh/T02n0099_p0052c17" target="_blank">T99.2.52c17-3a10</a>). Its closest parallel is <a href="https://suttacentral.net/sn35.71" target="_blank">SN 35.71</a>, but it’s also similar to the variants <a href="https://suttacentral.net/sn35.72" target="_blank">SN 35.72</a>-<a href="https://suttacentral.net/sn35.73" target="_blank">73</a>.</p>
+<li id="n1"><p>This is <em>sūtra</em> no. 209 in the <cite>Taisho</cite> edition and no. 271 in Yinshun (<a href="https://cbetaonline.dila.edu.tw/zh/T02n0099_p0052c17" target="_blank">T99.2.52c17-3a10</a>, <a href="https://cbetaonline.dila.edu.tw/zh/Y30n0030_p0254a06" target="_blank">Y30.254a6-5a3</a>). Its closest parallel is <a href="https://suttacentral.net/sn35.71" target="_blank">SN 35.71</a>, but it’s also similar to the variants <a href="https://suttacentral.net/sn35.72" target="_blank">SN 35.72</a>-<a href="https://suttacentral.net/sn35.73" target="_blank">73</a>.</p>
 <p>The main difference is that here the monk who comes forward claims to understand the formation, cessation, enjoyment, trouble, and escape from the six types of sensory contact. In SN 35.71-3, he says that he doesn’t understand them. Beyond that, this version is a bit more verbose than the Pali <em>sutta</em>s. We could consider this <em>sūtra</em> as a fourth variant of the same discourse. [<a href="#ref1">back</a>]</p></li>
 </ol>
 <hr/>
 
 <p class="translator">Translator: Charles Patton</p>
-<p class='revised'>Last Revised: 13 April 2025</p>
+<p class='revised'>Last Revised: 15 April 2025</p>
 
 <hr/>
