--- a/01_agama/samyukta/02/SA2_94.md
+++ b/01_agama/samyukta/02/SA2_94.md
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: 'The Related Discourses | 2. The Sense Fields | 94 (210). Don’t Be Pleased or Suffer'
+title: 'The Related Discourses | 2. The Sense Fields | 94 (210). Don’t Be Delighted or Suffer'
 type: kramdown
 base: ../../../
 previous: SA2_93.html
@@ -36,8 +36,8 @@ next: SA2_95.html
 <h3 id="notes">Notes</h3>
 
 <ol class="notes-list">
-<li id="n1"><p>This is <em>sūtra</em> no. 210 in the <cite>Taisho</cite> edition and no. 272 in Yinshun (<a href="https://cbetaonline.dila.edu.tw/zh/T02n0099_p0053a11" target="_blank">T99.2.53a11-25</a>). Its closest parallel is <a href="https://suttacentral.net/sn35.135" target="_blank">SN 35.135</a>.</p>
-<p>Comparing this text with SN 35.135, we notice a couple important textual issues: First is that the second case omits a “heaven” of six sensory contacts as the contrast to the hell of six sensory contacts, making the paragraph read strangely. Second, the three descriptions of sensory experience as “desirable” (可愛) “thinkable” (可念) and “good” (善) correspond to P. <em>iṭṭha</em> (“desirable”), <em>kanta</em> (“lovely”), and <em>manāpa</em> (“agreeable”). I wonder if 可念 might’ve been an overly literal attempt at translating a word like <em>manāpa</em>. Usually, the C. word for “agreeable” would be 可意, so it may be a case of awkward wording in Chinese. [<a href="#ref1">back</a>]</p></li>
+<li id="n1"><p>This is <em>sūtra</em> no. 210 in the <cite>Taisho</cite> edition and no. 272 in Yinshun (<a href="https://cbetaonline.dila.edu.tw/zh/T02n0099_p0053a11" target="_blank">T99.2.53a11-25</a>, <a href="https://cbetaonline.dila.edu.tw/zh/Y30n0030_p0255a14" target="_blank">Y30.255a14-6a7</a>). Its closest parallel is <a href="https://suttacentral.net/sn35.135" target="_blank">SN 35.135</a>.</p>
+<p>Comparing this text with SN 35.135, we notice a couple important textual issues: First is that the second case omits a “heaven” of six sensory contacts as the contrast to the hell of six sensory contacts, making the paragraph read strangely. Second, the three descriptions of sensory experience as “desirable” (<span class="ch">可愛</span>) “thinkable” (<span class="ch">可念</span>) and “good” (<span class="ch">善</span>) correspond to P. <em>iṭṭha</em> (“desirable”), <em>kanta</em> (“lovely”), and <em>manāpa</em> (“agreeable”). I wonder if <span class="ch">可念</span> might’ve been an overly literal attempt at translating a word like <em>manāpa</em>. Usually, the C. word for “agreeable” would be <span class="ch">可意</span>, so it may be a case of awkward wording in Chinese. [<a href="#ref1">back</a>]</p></li>
 </ol>
 <hr/>
 
