--- a/01_agama/samyukta/02/SA2_95.md
+++ b/01_agama/samyukta/02/SA2_95.md
@@ -23,7 +23,7 @@ next: SA2_96.html
   </tr>
   <tr>
     <td class='ch' title='t99.2.53b3'>「我以是精勤自護故，漸漸近阿耨多羅三藐三菩提。 汝等諸比丘亦復多逐過去五欲功德，現在、未來亦復微少。 汝今亦當以心多逐過去五欲功德故，增加自護。 亦當不久得盡諸漏。 無漏心解脫、慧解脫。 現法自知作證： 『我生已盡，梵行已立，所作已作。』 自知不受後有。</td>
-    <td id='p3'>3. “Because I earnestly guarded myself, I eventually drew near the unsurpassed and complete awakening. You monks also often chase after the virtues of the five desires from the past, and very seldom do you chase after them in the present or future. Now, you too should increasingly guard yourselves because your thoughts often chase after the virtues of the five desires from the past. You too should reach the end of the contaminants before long. Without contamination, you will be liberated in mind and liberated in wisdom. Then you’ll realize for yourselves in the present: ‘My births have been ended, the religious life has been established, and the task has been accomplished.’ You yourselves will know that you won’t be subject to another existence.</td>
+    <td id='p3'>3. “Because I earnestly guarded myself, I eventually drew near the unsurpassed and complete awakening. You monks also often chase after the virtues of the five desires from the past, and very seldom do you chase after them in the present or future. Now, you too should increasingly guard yourselves because your thoughts often chase after the virtues of the five desires from the past. You too should reach the end of the contaminants before long. Without contamination, you will be liberated in mind and liberated in wisdom. Then you’ll realize for yourselves in the present: ‘My births have been ended, the religious practice has been established, and the task has been accomplished.’ You yourselves will know you won’t be subject to another existence.</td>
   </tr>
   <tr>
     <td class='ch' title='t99.2.53b9'>「所以者何？ 眼見色因緣生內受，若苦、若樂、不苦不樂。 耳⋯鼻⋯舌⋯身⋯意法因緣生內受，若苦、若樂、不苦不樂。 是故，比丘，於彼入處當覺知： 若眼滅，色想則離。 耳⋯鼻⋯舌⋯身⋯意滅，法想則離。」</td>
@@ -39,7 +39,7 @@ next: SA2_96.html
   </tr>
   <tr>
     <td class='ch' title='t99.2.53b21'>復作是念： 「唯有尊者阿難。 常侍世尊，常為大師之所讚歎，聰慧梵行。 唯有尊者阿難堪能為我等於世尊略說法中演說其義。 我等今日皆共往詣尊者阿難所，問其要義。 如阿難所說，悉當奉持。」</td>
-    <td id='p7'>7. Again, they thought, “There’s just Venerable Ānanda. He’s always attending to the Bhagavān, and he’s always praised by the great teacher as being astute in the religious life. There’s only Venerable Ānanda who’s capable of fully explaining the meaning of the Bhagavān’s brief explanation of the Dharma. Let’s go together to Venerable Ānanda today and ask him about this brief meaning. We’ll all accept what Ānanda teaches us.”</td>
+    <td id='p7'>7. Again, they thought, “There’s just Venerable Ānanda. He’s always attending to the Bhagavān, and he’s always praised by the great teacher as being astute in the religious practice. There’s only Venerable Ānanda who’s capable of fully explaining the meaning of the Bhagavān’s brief explanation of the Dharma. Let’s go together to Venerable Ānanda today and ask him about this brief meaning. We’ll all accept what Ānanda teaches us.”</td>
   </tr>
   <tr>
     <td class='ch' title='t99.2.53b25'>爾時，眾多比丘往詣尊者阿難所。 共相問訊已，於一面坐，白尊者阿難言： 「尊者，當知世尊為我等略說法要⋯如上所說⋯ 具問阿難，當為我等廣說其義。」</td>
@@ -60,11 +60,11 @@ next: SA2_96.html
 <h3 id="notes">Notes</h3>
 
 <ol class="notes-list">
-<li id="n1"><p>This is <em>sūtra</em> no. 211 in the <cite>Taisho</cite> edition and no. 273 in Yinshun (<a href="https://cbetaonline.dila.edu.tw/zh/T02n0099_p0053a26" target="_blank">T99.2.53a26-c6</a>). Its closest parallel is <a href="https://suttacentral.net/sn35.117" target="_blank">SN 35.117</a>.</p>
+<li id="n1"><p>This is <em>sūtra</em> no. 211 in the <cite>Taisho</cite> edition and no. 273 in Yinshun (<a href="https://cbetaonline.dila.edu.tw/zh/T02n0099_p0053a26" target="_blank">T99.2.53a26-c6</a>, <a href="https://cbetaonline.dila.edu.tw/zh/Y30n0030_p0257a03" target="_blank">Y30.257a3-8a7</a>). Its closest parallel is <a href="https://suttacentral.net/sn35.117" target="_blank">SN 35.117</a>.</p>
 <p>SN 35.117 seems to be the more original version of this <em>sūtra</em>, but the difference is minor. Here, what appears to be an exegetical gloss is inserted into the Buddha’s brief teaching, and then Ānanda restates what he said by adding the word <em>āyatana</em>. See my note on the key passage below for more on this. In SN 35.117, the word <em>āyatana</em> was employed awkwardly by the Buddha, which confused the monks. This seems much more plausible as a reason for wanting a second opinion.</p>
 <p>This <em>sūtra</em> is interesting, however, in that it might represent a time when the term <em>āyatana</em> was first introduced as a label for the six senses as “places” of experience. It may be that it did cause some confusion at first, which led to conversations like the one we find here. [<a href="#ref1">back</a>]</p></li>
 <li id="n2"><p>The comparable passage in SN 35.117 reads: “So you should understand that dimension where the eye ceases and perception of sights fades away. You should understand that dimension where the ear … nose … tongue … body … mind ceases and perception of ideas fades away” (<em>Tasmātiha, bhikkhave, se āyatane veditabbe yattha cakkhu ca nirujjhati, rūpasaññā ca nirujjhati, se āyatane veditabbe …pe… yattha jivhā ca nirujjhati, rasasaññā ca nirujjhati, se āyatane veditabbe …pe… yattha mano ca nirujjhati, dhammasaññā ca nirujjhati, se āyatane veditabbe”ti</em>). Sujato here translates P. <em>āyatana</em> as “dimension” because the Buddha appears to mean something other than the sense fields, which are also called <em>āyatana</em>s. This is what leads to the confusion for the monks in SN 35.117.</p>
-<p>In this version here, that confusion is avoided by having the Buddha conclude with “you should become aware of the six sense fields” in the next paragraph, which is curiously added as a separate statement by the Buddha. This makes Ānanda’s explanation later appear to restate what the Buddha said. It seems that this version of the <em>sūtra</em> may have been rationalized by the insertion of an exegetical gloss, but the solution provided by Ānanda was left in place to restate the Buddha’s first statement with 入處 (<em>āyatana</em>) added after each sense. [<a href="#ref2">back</a>]</p></li>
+<p>In this version here, that confusion is avoided by having the Buddha conclude with “you should become aware of the six sense fields” in the next paragraph, which is curiously added as a separate statement by the Buddha. This makes Ānanda’s explanation later appear to restate what the Buddha said. It seems that this version of the <em>sūtra</em> may have been rationalized by the insertion of an exegetical gloss, but the solution provided by Ānanda was left in place to restate the Buddha’s first statement with <span class="ch">入處</span> (<em>āyatana</em>) added after each sense. [<a href="#ref2">back</a>]</p></li>
 </ol>
 <hr/>
 
