--- a/01_agama/samyukta/02/SA2_96.md
+++ b/01_agama/samyukta/02/SA2_96.md
@@ -27,7 +27,7 @@ next: SA2_97.html
   </tr>
   <tr>
     <td class='ch' title='t99.2.53c16'>「為何等像類比丘說不放逸行？ 若諸比丘在學地者，未得心意增上安隱，向涅槃住。 如是像類比丘，我為其說不放逸行。 所以者何？ 以彼比丘習學諸根，心樂隨順資生之具，親近善友。 不久當得盡諸有漏。 無漏心解脫、慧解脫。 現法自知作證： 『我生已盡，梵行已立，所作已作。』 自知不受後有。</td>
-    <td id='p4'>4. “For what type of monk do I teach careful practice? Suppose there are monks in the stage of learning who’ve yet to attain a higher peace of mind or orient themselves toward living in <em>nirvāṇa</em>. I teach the careful practice for this type of monk. Why is that? It’s because that monk is training his faculties, his mind is happy with the neccesities of life that he has, and he has made good friends. It won’t be long before he can stop being contaminated. Without contamination, he’ll be liberated in mind and liberated in wisdom. He’ll realize for himself in the present: ‘My births have been ended, the religious life has been established, and the task has been accomplished.’ He himself will know that he won’t be subject to another existence.</td>
+    <td id='p4'>4. “For what type of monk do I teach careful practice? Suppose there are monks in the stage of learning who’ve yet to attain a higher peace of mind or orient themselves toward living in <em>nirvāṇa</em>. I teach the careful practice for this type of monk. Why is that? It’s because that monk is training his faculties, his mind is happy with the neccesities of life that he has, and he has made good friends. It won’t be long before he can stop being contaminated. Without contamination, he’ll be liberated in mind and liberated in wisdom. He’ll realize for himself in the present: ‘My births have been ended, the religious practice has been established, and the task has been accomplished.’ He himself will know he won’t be subject to another existence.</td>
   </tr>
   <tr>
     <td class='ch' title='t99.2.53c23'>「所以者何？ 彼眼識所可愛樂、染著之色，彼比丘見已，不喜、不讚歎、不染、不繫著住。 以不喜、不讚歎、不染、不著住故，專精勝進。 身心止息，心安極，住不忘。 常定一心，無量法喜。 但逮得第一三昧正受，終不退滅隨於眼色。 於耳、鼻、舌、身、意識法亦復如是。」</td>
@@ -44,7 +44,7 @@ next: SA2_97.html
 <h3 id="notes">Notes</h3>
 
 <ol class="notes-list">
-<li id="n1"><p>This is <em>sūtra</em> no. 212 in the <cite>Taisho</cite> edition and no. 274 in Yinshun (<a href="https://cbetaonline.dila.edu.tw/zh/T02n0099_p0053c07" target="_blank">T99.2.53c7-29</a>). Its closest parallel is <a href="https://suttacentral.net/sn35.134" target="_blank">SN 35.134</a>. These two parallels are very similar aside from a couple small details. One is that the location here is the default one at Anāthapiṇḍada’s Park. Another is that here the Buddha refers to “careful practice” in general, while he mentions it specifically in the context of the six sense fields in SN 34.134. [<a href="#ref1">back</a>]</p></li>
+<li id="n1"><p>This is <em>sūtra</em> no. 212 in the <cite>Taisho</cite> edition and no. 274 in Yinshun (<a href="https://cbetaonline.dila.edu.tw/zh/T02n0099_p0053c07" target="_blank">T99.2.53c7-29</a>, <a href="https://cbetaonline.dila.edu.tw/zh/Y30n0030_p0259a12" target="_blank">Y30.259a12-60a8</a>). Its closest parallel is <a href="https://suttacentral.net/sn35.134" target="_blank">SN 35.134</a>. These two parallels are very similar aside from a couple small details. One is that the location here is the default one at Anāthapiṇḍada’s Park. Another is that here the Buddha refers to “careful practice” in general, while he mentions it specifically in the context of the six sense fields in SN 34.134. [<a href="#ref1">back</a>]</p></li>
 </ol>
 <hr/>
 
