--- a/01_agama/samyukta/02/SA2_97.md
+++ b/01_agama/samyukta/02/SA2_97.md
@@ -44,7 +44,7 @@ next: SA2_123-125.html
 <h3 id="notes">Notes</h3>
 
 <ol class="notes-list">
-<li id="n1"><p>This is <em>sūtra</em> no. 213 in the <cite>Taisho</cite> edition and no. 275 in Yinshun (<a href="https://cbetaonline.dila.edu.tw/zh/T02n0099_p0054a01" target="_blank">T99.2.54a1-21</a>). Its a partial parallel to <a href="https://suttacentral.net/sn35.92" target="_blank">SN 35.92</a>.</p>
+<li id="n1"><p>This is <em>sūtra</em> no. 213 in the <cite>Taisho</cite> edition and no. 275 in Yinshun (<a href="https://cbetaonline.dila.edu.tw/zh/T02n0099_p0054a01" target="_blank">T99.2.54a1-21</a>, <a href="https://cbetaonline.dila.edu.tw/zh/Y30n0030_p0261a11" target="_blank">Y30.261a11-2a7</a>). Its a partial parallel to <a href="https://suttacentral.net/sn35.92" target="_blank">SN 35.92</a>.</p>
 <p>This <em>sūtra</em> includes a treatment of how not understanding contact with sensory experience leads to suffering, and how its understanding leads to the cessation of the same. This is not found in SN 35.92. The two <em>sūtra</em>s only share the initial statement about the senses and their objects being two things. [<a href="#ref1">back</a>]</p></li>
 </ol>
 <hr/>
