--- a/01_agama/samyukta/02/SA2_126.md
+++ b/01_agama/samyukta/02/SA2_126.md
@@ -36,7 +36,7 @@ next: SA2_127.html
 <h3 id="notes">Notes</h3>
 
 <ol class="notes-list">
-<li id="n1"><p>This is <em>sūtra</em> no. 231 in the <cite>Taisho</cite> edition and no. 304 in Yinshun (<a href="https://cbetaonline.dila.edu.tw/zh/T02n0099_p0056b11" target="_blank">T99.2.56b11-20</a>). It’s parallel to <a href="https://suttacentral.net/sn35.82" target="_blank">SN 35.82</a> and <a href="https://suttacentral.net/sn35.84" target="_blank">84</a>. [<a href="#ref1">back</a>]</p></li>
+<li id="n1"><p>This is <em>sūtra</em> no. 231 in the <cite>Taisho</cite> edition and no. 304 in Yinshun (<a href="https://cbetaonline.dila.edu.tw/zh/T02n0099_p0056b11" target="_blank">T99.2.56b11-20</a>, <a href="https://cbetaonline.dila.edu.tw/zh/Y30n0030_p0276a04" target="_blank">Y30.276a4-9</a>). It’s parallel to <a href="https://suttacentral.net/sn35.82" target="_blank">SN 35.82</a> and <a href="https://suttacentral.net/sn35.84" target="_blank">84</a>. [<a href="#ref1">back</a>]</p></li>
 </ol>
 <hr/>
 
